# TauriAppTemplate

./: Cargo.toml  Makefile  README.md
src-js/: Makefile  next.config.js  package-lock.json  package.json
src-js/src/: style.css
src-js/src/components/: AlertPopup.tsx  Editor.tsx  SideView.tsx  TerminalPanel.tsx
src-js/src/pages/: index.tsx
src-js/src/tauri/: Command.ts
src-rs/: Cargo.toml  build.rs  tauri.conf.json
src-rs/src/: command.rs  main.rs  project.rs
src-rs/src/command/: export_project.rs  open_project.rs  save_project.rs  subprocess.rs
